Blender crashes when baking a texture from cycles #60246

Closed
opened 2019-01-06 22:37:18 +01:00 by Stacey · 3 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia 1080 ti

Blender Version
Broken: 2.8 beta - 2019-01-06 17:21 - hash: 2edd32c168

Short description of error
When I try to bake my cycles blender Crashes. I got it to go once out of about 15 attempts.

Exact steps for others to reproduce the error

  1. Load attached .blend file
  2. Click "Bake" under the "Render" Properties

1 - Heart Bottle.blend

**System Information** Operating system: Windows 10 Graphics card: Nvidia 1080 ti **Blender Version** Broken: 2.8 beta - 2019-01-06 17:21 - hash: 2edd32c168d3 **Short description of error** When I try to bake my cycles blender Crashes. I got it to go once out of about 15 attempts. **Exact steps for others to reproduce the error** 1. Load attached .blend file 2. Click "Bake" under the "Render" Properties [1 - Heart Bottle.blend](https://archive.blender.org/developer/F6203367/1_-_Heart_Bottle.blend)
Author

Added subscriber: @Yecats

Added subscriber: @Yecats
Brecht Van Lommel self-assigned this 2019-01-15 12:42:34 +01:00

This issue was referenced by e4c78436c6

This issue was referenced by e4c78436c6a3bef0d30ff656a4758295f58b5ae4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60246
No description provided.