Fix T60246: crash with Cycles baking while in edit mode.